Admin page template.

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css","node_modules/@nebular/theme/styles/prebuilt/cosmic.css"
             ],
             "scripts": [
             ]
