--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
+    "moment": "^2.22.2",
     "ng2-smart-table": "^1.3.5",
     "rxjs": "^6.3.3",
     "rxjs-compat": "^6.3.3",
