--- a/angular.json
+++ b/angular.json
@@ -23,14 +23,16 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
               "src/styles.scss",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css","node_modules/@nebular/theme/styles/prebuilt/cosmic.css"
+              "node_modules/bootstrap/dist/css/bootstrap.min.css","node_modules/@nebular/theme/styles/prebuilt/cosmic.css",
+              "node_modules/alertifyjs/build/css/alertify.min.css",
+              "node_modules/alertifyjs/build/css/themes/default.min.css"
             ],
             "scripts": [
+              "node_modules/alertifyjs/build/alertify.min.js"
             ]
           },
           "configurations": {
